--- a/xdr-ztsa.yaml
+++ b/xdr-ztsa.yaml
@@ -448,8 +448,8 @@ Resources:
 
 
             # Download RDP file
-            Invoke-WebRequest https://raw.githubusercontent.com/andrefernandes86/demo-v1-ztsa/main/10.0.3.20.rdp OutFile c:\users\administrator\desktop\10.0.3.20.rdp
-            Invoke-WebRequest https://raw.githubusercontent.com/andrefernandes86/demo-v1-ztsa/main/bookmarks.html OutFile c:\users\administrator\desktop\bookmarks.html
+            Invoke-WebRequest 'https://raw.githubusercontent.com/andrefernandes86/demo-v1-ztsa/main/10.0.3.20.rdp' -OutFile c:\users\administrator\desktop\10.0.3.20.rdp
+            Invoke-WebRequest 'https://raw.githubusercontent.com/andrefernandes86/demo-v1-ztsa/main/bookmarks.html' -OutFile c:\users\administrator\desktop\bookmarks.html
             </powershell>
 
 Outputs:
