--- a/demo-aws-ztsa.yaml
+++ b/demo-aws-ztsa.yaml
@@ -22,9 +22,11 @@ Parameters:
     Description: AWS - (Linux AMI ID) DO NOT CHANGE THIS VALUE  
   WindowsUsername:
     Description: AWS - Please enter username to be used when accessing the Windows Instances.
+    Default: trendmicro
     Type: 'String'
   WindowsPassword:
     Description: AWS - Please enter password to be used when accessing the Windows Instances (8 characters including capital case, lower cases and special characters).
+    Default: Trend@00p$
     Type: 'String'
   RegistrationToken:
     Type: String
