--- a/demo-aws-ztsa.yaml
+++ b/demo-aws-ztsa.yaml
@@ -265,6 +265,12 @@ Resources:
             Invoke-Expression "c:\chrome.exe /silent /install"
             Start-Sleep -Seconds 10
 
+            # Disable Password Complexity
+            secedit /export /cfg c:\secpol.cfg
+            (gc C:\secpol.cfg).replace("PasswordComplexity = 1", "PasswordComplexity = 0") | Out-File C:\secpol.cfg
+            secedit /configure /db c:\windows\security\local.sdb /cfg c:\secpol.cfg /areas SECURITYPOLICY
+            rm -force c:\secpol.cfg -confirm:$false
+
             # Create User
             $Username = "${WindowsUsername}"
             $Password = "${WindowsPassword}"
@@ -433,6 +439,12 @@ Resources:
             Invoke-WebRequest -Uri ${VisionOneURL} -OutFile c:\basecamp.exe
             Start-Process c:\basecamp.exe
             Start-Sleep -Seconds 10
+
+            # Disable Password Complexity
+            secedit /export /cfg c:\secpol.cfg
+            (gc C:\secpol.cfg).replace("PasswordComplexity = 1", "PasswordComplexity = 0") | Out-File C:\secpol.cfg
+            secedit /configure /db c:\windows\security\local.sdb /cfg c:\secpol.cfg /areas SECURITYPOLICY
+            rm -force c:\secpol.cfg -confirm:$false
 
             # Create User
             $Username = "${WindowsUsername}"
